force-app/main/default/objects/HAM_Event_Item_Session__c/HAM_Event_Item_Session__c.object-meta.xml
<CustomObject>
    <description>Represents the association between a ticket type and a session for a Cvent event, including pricing and attendance rules.</description>
    <label>HAM Event Item Session</label>
    <nameField>
        <displayFormat>EIS-{00000000}</displayFormat>
        <label>Event Item Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HAM Event Item Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>