force-app/main/default/objects/HAM_Event_Item_Session__c/fields/CventEvents_Event__c.field-meta.xml
<CustomField>
    <fullName>CventEvents_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Cvent event this item-session association belongs to.</description>
    <inlineHelpText>The Cvent event this item-session record is associated with.</inlineHelpText>
    <label>Event</label>
    <referenceTo>CventEvents__Event__c</referenceTo>
    <relationshipLabel>HAM Event Item Sessions</relationshipLabel>
    <relationshipName>HAM_Event_Item_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>