force-app/main/default/objects/HAM_Event_Item_Session__c/fields/HAM_BT_Event_Item_Session__c.field-meta.xml
<CustomField>
    <fullName>HAM_BT_Event_Item_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Traceability lookup to the original Blackthorn event item session this record was migrated from. Will be empty once Blackthorn is decommissioned.</description>
    <inlineHelpText>The original Blackthorn event item session this record was migrated from. Used for migration QC and validation only.</inlineHelpText>
    <label>BT Event Item Session</label>
    <referenceTo>conference360__Event_Item_Session__c</referenceTo>
    <relationshipLabel>HAM Event Item Sessions</relationshipLabel>
    <relationshipName>HAM_Event_Item_Sessions_BT</relationshipName>
    <type>Lookup</type>
</CustomField>