force-app/main/default/objects/HAM_Event_Item_Session__c/fields/HAM_Free__c.field-meta.xml
<CustomField>
    <fullName>HAM_Free__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this session is available at no additional cost when included with the associated ticket type.</description>
    <inlineHelpText>Check if this session is free of charge with the associated ticket.</inlineHelpText>
    <label>Free</label>
    <type>Checkbox</type>
</CustomField>