force-app/main/default/objects/HAM_Event_Item_Session__c/fields/HAM_Price__c.field-meta.xml
<CustomField>
    <fullName>HAM_Price__c</fullName>
    <description>Price for attending this session when purchased with the associated ticket type.</description>
    <inlineHelpText>The price charged for this session item.</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>