force-app/main/default/objects/HAM_Event_Item_Session__c/fields/HAM_Required__c.field-meta.xml
<CustomField>
    <fullName>HAM_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether attendance at this session is mandatory for attendees with the associated ticket type.</description>
    <inlineHelpText>Check if this session is required for attendees with the associated ticket type.</inlineHelpText>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>