force-app/main/default/objects/HAM_Event_Item_Session__c/fields/HAM_Session__c.field-meta.xml
<CustomField>
    <fullName>HAM_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the session this item-session record is associated with.</description>
    <inlineHelpText>The event session linked to this item-session record.</inlineHelpText>
    <label>Session</label>
    <referenceTo>HAM_Event_Session__c</referenceTo>
    <relationshipLabel>HAM Event Item Sessions</relationshipLabel>
    <relationshipName>HAM_Event_Item_Sessions_Session</relationshipName>
    <type>Lookup</type>
</CustomField>