force-app/main/default/objects/HAM_Event_Item_Session__c/fields/HAM_Ticket__c.field-meta.xml
<CustomField>
    <fullName>HAM_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the ticket type associated with this item-session record.</description>
    <inlineHelpText>The ticket type linked to this session item.</inlineHelpText>
    <label>Ticket</label>
    <referenceTo>HAM_Event_Ticket__c</referenceTo>
    <relationshipLabel>HAM Event Item Sessions</relationshipLabel>
    <relationshipName>HAM_Event_Item_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>